--- a/about.ui
+++ b/about.ui
@@ -31,7 +31,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="Resource.qrc">:/resources/Resources/registro_icon.png</pixmap>
+     <pixmap resource="resources.qrc">:/Resources/registro_icon.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -124,15 +124,14 @@
      <x>0</x>
      <y>0</y>
      <width>433</width>
-     <height>21</height>
+     <height>24</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources>
-  <include location="Resource.qrc"/>
-  <include location="Resource.qrc"/>
+  <include location="resources.qrc"/>
  </resources>
  <connections/>
 </ui>
