--- a/createDB.ui
+++ b/createDB.ui
@@ -102,7 +102,10 @@
     <item>
      <widget class="QLabel" name="lblQueryStatus">
       <property name="text">
-       <string>result</string>
+       <string/>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
       </property>
      </widget>
     </item>
