--- a/delTS.ui
+++ b/delTS.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>530</width>
+    <width>472</width>
     <height>512</height>
    </rect>
   </property>
@@ -19,7 +19,7 @@
      <rect>
       <x>10</x>
       <y>40</y>
-      <width>301</width>
+      <width>261</width>
       <height>171</height>
      </rect>
     </property>
@@ -30,7 +30,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>160</x>
+      <x>120</x>
       <y>10</y>
       <width>58</width>
       <height>18</height>
@@ -45,7 +45,7 @@
      <rect>
       <x>10</x>
       <y>280</y>
-      <width>311</width>
+      <width>261</width>
       <height>171</height>
      </rect>
     </property>
@@ -56,7 +56,7 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>160</x>
+      <x>120</x>
       <y>250</y>
       <width>58</width>
       <height>18</height>
@@ -69,8 +69,8 @@
    <widget class="QSpinBox" name="spnSub">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>90</y>
+      <x>300</x>
+      <y>100</y>
       <width>52</width>
       <height>32</height>
      </rect>
@@ -79,8 +79,8 @@
    <widget class="QPushButton" name="btnDeleteSub">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>90</y>
+      <x>360</x>
+      <y>100</y>
       <width>88</width>
       <height>34</height>
      </rect>
@@ -92,8 +92,8 @@
    <widget class="QSpinBox" name="spnTeach">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>330</y>
+      <x>300</x>
+      <y>340</y>
       <width>52</width>
       <height>32</height>
      </rect>
@@ -102,8 +102,8 @@
    <widget class="QPushButton" name="btnDeleteTeach">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>330</y>
+      <x>360</x>
+      <y>340</y>
       <width>88</width>
       <height>34</height>
      </rect>
@@ -117,7 +117,7 @@
      <rect>
       <x>10</x>
       <y>220</y>
-      <width>491</width>
+      <width>441</width>
       <height>20</height>
      </rect>
     </property>
@@ -134,7 +134,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>530</width>
+     <width>472</width>
      <height>30</height>
     </rect>
    </property>
@@ -149,7 +149,7 @@
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionRefresh">
    <property name="text">
-    <string>Refresh</string>
+    <string>&amp;Refresh</string>
    </property>
   </action>
  </widget>
