--- a/createDB.ui
+++ b/createDB.ui
@@ -182,7 +182,7 @@
   </action>
   <action name="actionUpdate">
    <property name="text">
-    <string>Edit Subjects</string>
+    <string>Update Subjects or Teachers</string>
    </property>
   </action>
   <action name="actionDeleteSubject">
@@ -192,7 +192,7 @@
   </action>
   <action name="actionDelete">
    <property name="text">
-    <string>Delete Subjects</string>
+    <string>&amp;Delete Subjects or Teachers</string>
    </property>
   </action>
  </widget>
