--- a/registro.ui
+++ b/registro.ui
@@ -122,7 +122,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="pushButton">
+             <widget class="QPushButton" name="btnAddElements">
               <property name="text">
                <string>Add</string>
               </property>
