--- a/registro.ui
+++ b/registro.ui
@@ -31,6 +31,13 @@
           </widget>
          </item>
          <item>
+          <widget class="QLabel" name="lblAvg">
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+         </item>
+         <item>
           <spacer name="horizontalSpacer">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
