--- a/delTS.ui
+++ b/delTS.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Delete Teachers or Subjects</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="resources/res.qrc">
+    <normaloff>:/imgs/images/window_icon.ico</normaloff>:/imgs/images/window_icon.ico</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QTableView" name="tbSubjects">
     <property name="geometry">
@@ -153,6 +157,8 @@
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="resources/res.qrc"/>
+ </resources>
  <connections/>
 </ui>
