--- a/addMK.ui
+++ b/addMK.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Add a Mark</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="resources/res.qrc">
+    <normaloff>:/imgs/images/window_icon.ico</normaloff>:/imgs/images/window_icon.ico</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLineEdit" name="lnDescription">
     <property name="geometry">
@@ -187,6 +191,8 @@
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="resources/res.qrc"/>
+ </resources>
  <connections/>
 </ui>
