--- a/delTS.ui
+++ b/delTS.ui
@@ -23,7 +23,7 @@
      <rect>
       <x>10</x>
       <y>40</y>
-      <width>261</width>
+      <width>271</width>
       <height>171</height>
      </rect>
     </property>
@@ -40,6 +40,12 @@
       <height>18</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
     <property name="text">
      <string>Subjects</string>
     </property>
@@ -49,7 +55,7 @@
      <rect>
       <x>10</x>
       <y>280</y>
-      <width>261</width>
+      <width>271</width>
       <height>171</height>
      </rect>
     </property>
@@ -66,6 +72,12 @@
       <height>18</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
     <property name="text">
      <string>Teachers</string>
     </property>
@@ -76,7 +88,7 @@
       <x>300</x>
       <y>100</y>
       <width>52</width>
-      <height>32</height>
+      <height>21</height>
      </rect>
     </property>
    </widget>
@@ -86,7 +98,7 @@
       <x>360</x>
       <y>100</y>
       <width>88</width>
-      <height>34</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
@@ -99,7 +111,7 @@
       <x>300</x>
       <y>340</y>
       <width>52</width>
-      <height>32</height>
+      <height>21</height>
      </rect>
     </property>
    </widget>
@@ -109,7 +121,7 @@
       <x>360</x>
       <y>340</y>
       <width>88</width>
-      <height>34</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
